--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,59 +56,6 @@ body {
   background: rgba(246, 241, 209, 0.1);
 }
 
-body {
-  margin: 0;
-}
-
-.app {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100vw;
-  min-height: 100vh;
-}
-
-.todo-list {
-  background-color: #0B2027;
-  font-family: "Space Mono", monospace;
-  padding: 1rem;
-  min-width: 400px;
-  min-height: 300px;
-}
-
-.title {
-  border-bottom: 1px solid rgba(246, 241, 209, 0.5);
-  font-size: 1.5rem;
-  font-family: "BioRhyme", serif;
-  color: #F6F1D1;
-}
-
-.form {
-  display: flex;
-  justify-content: center;
-}
-.form-input, .form-button {
-  border-radius: 0;
-  padding: 0.75rem;
-  font-size: 0.75rem;
-}
-.form-input {
-  outline: none;
-  background-color: #F6F1D1;
-  border-color: rgba(255, 255, 255, 0.1);
-}
-.form-button {
-  border: 1px;
-  background: #F6F1D1;
-  text-transform: uppercase;
-  cursor: pointer;
-  margin-left: 0.25rem;
-}
-.form-button:hover {
-  color: #F6F1D1;
-  background: rgba(246, 241, 209, 0.1);
-}
-
 .list {
   padding: 0;
   list-style: none;
@@ -153,6 +100,10 @@ body {
 
 .content {
   margin: 0;
+}
+
+.content-data {
+  color: #DDDDDD;
 }
 
 .task.done .content {
